--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,6 @@
 language: python
+python:
+    - 3.5
+install:
+	- pip install unittest
+script: python YardiBackOfficeManager\YardiProcessManager\DataManagerTDD.py
