--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
 python:
     - 3.5
-install: pip install unittest
+install: pip install unittest2
 script: python DataManagerTDD.py
