--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
     - 3.5
-install: pip install unittest2
+install: 
+    - pip install unittest2
+    - pip install pyrebase
 script: python YardiBackOfficeManager/YardiProcessManager/DataManagerTDD.py
