--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ install:
     - pip install unittest2
     - pip install pyrebase
     - pip install urllib3
+    - pip install geocoder
 script: python YardiBackOfficeManager/YardiProcessManager/DataManagerTDD.py
